# mydir

./: .gitignore  .hgignore  MyDir.hs  README.md  default.nix  flake.nix  mydir.cabal  release.nix  shell.nix  stack.yaml
nix/: sources.json
src/: MyDir.hs
