name:      mydir
version:   1.0
synopsis:  A simple directory listing utility
description:
  Split up the directory contents into sub-directories, executable
  files, links, and other.

license:   PublicDomain
author:    Douglas Burke
maintainer: dburke.gw@gmail.com

build-type:     Simple
cabal-version:  >= 1.8

executable mydir
  hs-source-dirs:  src
  main-is:         MyDir.hs

  -- Note: just trying to get to build on 7.6.3, not trying to work
  --       out how far back to go.
  build-depends:
     base >= 4.6 && < 4.8,
     directory == 1.2.*,
     filepath == 1.3.*,
     process >= 1.1 && < 1.3,
     unix >= 2.6 && < 2.8

  ghc-options:
     -Wall

