cabal-version:  2.4

name:      mydir
version:   1.1
synopsis:  A simple directory listing utility
description:
  Split up the directory contents into sub-directories, executable
  files, links, and other.

license:   CC0-1.0
author:    Douglas Burke
maintainer: dburke.gw@gmail.com

build-type:     Simple

executable mydir
  hs-source-dirs:  src
  main-is:         MyDir.hs

  build-depends:
     ansi-terminal == 0.11.*,
     base >= 4.6 && < 5.0,
     -- to avoid conditional code to deal with changes in directory,
     -- juts pick a recent version
     directory >= 1.3 && < 1.4,
     filepath >= 1.3 && < 1.5,
     process >= 1.1 && < 1.7,
     unix >= 2.6 && < 2.8

  default-language: Haskell2010

  ghc-options:
     -Wall

